@@ -1,3 +1,8 @@
+2010-05-14  Carsten Dominik  <carsten.dominik@gmail.com>
+
+	* org.el (org-file-contents): Improve error message.
+	(org-set-regexps-and-options): Remove spaces at both ends.
+
 2010-05-13  Carsten Dominik  <carsten.dominik@gmail.com>
 
 	* org-docbook.el (org-export-as-docbook-pdf): Improve
